[gd_scene load_steps=5 format=3 uid="uid://b5m52xwf4ppup"]

[ext_resource type="Script" uid="uid://bkh2bi5w43d5g" path="res://scripts/player/HealthAndEffectsControl.gd" id="1_o372c"]
[ext_resource type="Texture2D" uid="uid://bhscje1q3dkhx" path="res://assets/images/beer_effect_no_bg.png" id="2_1m7w6"]
[ext_resource type="Texture2D" uid="uid://dax4a0jhoigpc" path="res://assets/images/cereal_effect_no_bg.png" id="3_taioo"]
[ext_resource type="Texture2D" uid="uid://dvb184tbrmnut" path="res://assets/images/slime_effect_no_bg.png" id="4_jdj1i"]

[node name="HealthAndEffects" type="CanvasLayer"]

[node name="HealthAndEffectsControl" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
script = ExtResource("1_o372c")

[node name="HealthBar" type="Control" parent="HealthAndEffectsControl"]
clip_contents = true
anchors_preset = 0
offset_left = 10.0
offset_top = 14.0
offset_right = 467.0
offset_bottom = 45.0

[node name="Backgroung" type="ColorRect" parent="HealthAndEffectsControl/HealthBar"]
layout_mode = 0
offset_top = 1.0
offset_right = 457.0
offset_bottom = 29.0

[node name="HealthLevel" type="ColorRect" parent="HealthAndEffectsControl/HealthBar"]
layout_mode = 0
offset_top = 1.0
offset_right = 457.0
offset_bottom = 29.0
color = Color(0.685298, 0.104151, 0, 1)

[node name="Borders" type="Control" parent="HealthAndEffectsControl/HealthBar"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="HealthAndEffectsControl/HealthBar/Borders"]
layout_mode = 0
offset_top = 1.0
offset_right = 457.0
offset_bottom = 3.0
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="ColorRect2" type="ColorRect" parent="HealthAndEffectsControl/HealthBar/Borders"]
layout_mode = 0
offset_left = 1.0
offset_top = 29.0
offset_right = 458.0
offset_bottom = 31.0
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="ColorRect3" type="ColorRect" parent="HealthAndEffectsControl/HealthBar/Borders"]
layout_mode = 0
offset_top = 3.0
offset_right = 2.0
offset_bottom = 39.0
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="ColorRect4" type="ColorRect" parent="HealthAndEffectsControl/HealthBar/Borders"]
layout_mode = 0
offset_left = 455.0
offset_top = 3.0
offset_right = 457.0
offset_bottom = 39.0
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="BeerEffect" type="Sprite2D" parent="HealthAndEffectsControl"]
position = Vector2(34.4556, 68.7592)
scale = Vector2(0.130309, 0.130309)
texture = ExtResource("2_1m7w6")

[node name="BeerTimer" type="Timer" parent="HealthAndEffectsControl/BeerEffect"]
wait_time = 15.0

[node name="CerealEffect" type="Sprite2D" parent="HealthAndEffectsControl"]
position = Vector2(82.4556, 68.7592)
scale = Vector2(0.0870891, 0.0785805)
texture = ExtResource("3_taioo")

[node name="CerealTimer" type="Timer" parent="HealthAndEffectsControl/CerealEffect"]
wait_time = 15.0

[node name="SlimeEffect" type="Sprite2D" parent="HealthAndEffectsControl"]
position = Vector2(125.456, 68.7592)
scale = Vector2(0.129096, 0.119643)
texture = ExtResource("4_jdj1i")

[node name="SlimeTimer" type="Timer" parent="HealthAndEffectsControl/SlimeEffect"]
wait_time = 15.0

[connection signal="timeout" from="HealthAndEffectsControl/BeerEffect/BeerTimer" to="HealthAndEffectsControl" method="_on_beer_timer_timeout"]
[connection signal="timeout" from="HealthAndEffectsControl/CerealEffect/CerealTimer" to="HealthAndEffectsControl" method="_on_cereal_timer_timeout"]
[connection signal="timeout" from="HealthAndEffectsControl/SlimeEffect/SlimeTimer" to="HealthAndEffectsControl" method="_on_slime_timer_timeout"]
